--- a/index.html
+++ b/index.html
@@ -4,18 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LEGO Vault | Colección Exclusiva de Sets LEGO</title>
-    <meta name="description" content="LEGO Vault - Explora nuestra colección exclusiva de sets de LEGO. Star Wars, Harry Potter, Marvel y más. Consulta disponibilidad por WhatsApp." />
+
+    <link rel="icon" type="image/png" href="/estrella-de-la-muerte.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/estrella-de-la-muerte.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/estrella-de-la-muerte.png" />
+    <link rel="apple-touch-icon" href="/estrella-de-la-muerte.png" />
+
+    <meta
+      name="description"
+      content="LEGO Vault - Explora nuestra colección exclusiva de sets LEGO. Star Wars, Harry Potter, Marvel y más. Consulta disponibilidad por WhatsApp."
+    />
     <meta name="author" content="LEGO Vault" />
     <meta name="theme-color" content="#0a0a0f" />
 
     <meta property="og:title" content="LEGO Vault | Colección Exclusiva" />
-    <meta property="og:description" content="Explora sets de LEGO: Star Wars, Harry Potter, Marvel y más. Consulta por WhatsApp." />
+    <meta
+      property="og:description"
+      content="Explora sets de LEGO: Star Wars, Harry Potter, Marvel y más. Consulta por WhatsApp."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/estrella-de-la-muerte.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@LEGOVault" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="LEGO Vault | Colección Exclusiva" />
+    <meta
+      name="twitter:description"
+      content="Explora sets de LEGO: Star Wars, Harry Potter, Marvel y más."
+    />
+    <meta name="twitter:image" content="/estrella-de-la-muerte.png" />
   </head>
 
   <body>
