fix index.html paths for github pages

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>LEGO Vault | Colección Exclusiva de Sets LEGO</title>
 
-    <link rel="icon" type="image/png" href="/estrella-de-la-muerte.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/estrella-de-la-muerte.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/estrella-de-la-muerte.png" />
-    <link rel="apple-touch-icon" href="/estrella-de-la-muerte.png" />
+    <!-- ICONOS (rutas RELATIVAS, no absolutas) -->
+    <link rel="icon" type="image/png" href="estrella-de-la-muerte.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="estrella-de-la-muerte.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="estrella-de-la-muerte.png" />
+    <link rel="apple-touch-icon" href="estrella-de-la-muerte.png" />
 
+    <!-- SEO -->
     <meta
       name="description"
       content="LEGO Vault - Explora nuestra colección exclusiva de sets LEGO. Star Wars, Harry Potter, Marvel y más. Consulta disponibilidad por WhatsApp."
@@ -17,25 +20,29 @@
     <meta name="author" content="LEGO Vault" />
     <meta name="theme-color" content="#0a0a0f" />
 
+    <!-- Open Graph -->
     <meta property="og:title" content="LEGO Vault | Colección Exclusiva" />
     <meta
       property="og:description"
       content="Explora sets de LEGO: Star Wars, Harry Potter, Marvel y más. Consulta por WhatsApp."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/estrella-de-la-muerte.png" />
+    <meta property="og:image" content="estrella-de-la-muerte.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LEGO Vault | Colección Exclusiva" />
     <meta
       name="twitter:description"
       content="Explora sets de LEGO: Star Wars, Harry Potter, Marvel y más."
     />
-    <meta name="twitter:image" content="/estrella-de-la-muerte.png" />
+    <meta name="twitter:image" content="estrella-de-la-muerte.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+    <!-- SCRIPT PRINCIPAL (RELATIVO, NO /src/...) -->
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
