--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script>
-      const repo = "/mikeco-frontend";
+      const repo = "/MikeCoLego";
       const path = window.location.pathname;
       window.location.replace(repo + "/?redirect=" + path.replace(repo, ""));
     </script>
